--- a/src/utils/utils-scss/vars.scss
+++ b/src/utils/utils-scss/vars.scss
@@ -7,8 +7,8 @@ $bold: 700;
 
 // font-family
 
-$font-family-primary: 'Montserrat', Arial, sans-serif;
-$font-family-secondary: 'OpenSans', Arial, sans-serif;
+$font-family-primary: 'Montserrat', arial, sans-serif;
+$font-family-secondary: 'OpenSans', arial, sans-serif;
 // line-height
 $line-height-primary: 1.4;
 
@@ -38,7 +38,7 @@ $button-text-color-secondary: #bc9cff;
 $primary-color: #bc9cff;
 $secondary-color: #6fcf97;
 $body-color: #e5e5e5;
-$bg-color-primary: #ffffff;
+$bg-color-primary: #fff;
 $danger-color: #fc5c65;
 
 // transition
