--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -1,38 +1,43 @@
 .bullet-list {
   max-width: 292px;
+
   &__li {
+    margin-bottom: 10px;
     display: flex;
     align-items: flex-start;
-    margin-bottom: 10px;
+
     @media (max-width: $phone-width) {
       margin-bottom: 5px;
     }
+
     &:last-child {
       margin-bottom: 0;
     }
-    &:before {
-      content: '';
+
+    &::before {
+      margin-top: 5px;
+      margin-right: 10px;
       display: block;
-      width: 10px;
+      min-width: 10px;
       height: 10px;
-      min-width: 10px;
-      min-width: 10px;
+      content: '';
       background-color: $text-color-brightness-25;
       border-radius: 50%;
-      margin-right: 10px;
-      margin-top: 5px;
+
       @media (max-width: $phone-width) {
         margin-right: 5px;
       }
     }
   }
+
   &__text {
     font-family: $font-family-primary;
     font-size: 14px;
-    color: $text-color-brightness-75;
-    white-space: pre;
     line-height: 24px;
+    white-space: pre;
     white-space: pre-wrap;
+    color: $text-color-brightness-75;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
       line-height: 20px;
