--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -1,17 +1,20 @@
 .card-room {
   $self: &;
-  background-color: $bg-color-primary;
-  max-width: 270px;
+
+  overflow: hidden;
+  box-sizing: content-box;
   min-width: 270px;
+  max-width: 270px;
+  background-color: $bg-color-primary;
   border-radius: 4px;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-  box-sizing: content-box;
-  overflow: hidden;
+
   &__slider {
     position: relative;
+
     &:hover {
       #{$self}__slide {
-        &:after {
+        &::after {
           opacity: 1;
         }
       }
@@ -21,126 +24,148 @@
       }
     }
   }
+
   &__pagination {
-    text-align: right;
     padding-right: 15px;
+    text-align: right;
   }
+
   .swiper-pagination-bullet {
+    margin-right: 0;
     opacity: 1;
     background: none;
     border: 1px solid #fff;
     box-shadow: 0 5px 5px rgba(31, 32, 65, 0.1);
-    margin-right: 0;
   }
+
   .swiper-pagination-bullet-active {
     background: #fff;
     border: 1px solid #fff;
     box-shadow: 0 5px 5px rgba(31, 32, 65, 0.3);
   }
+
   .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0;
     margin-right: 3.75px;
+
     &:last-child {
       margin-right: 0;
     }
   }
 
   &__slide {
-    &:after {
-      content: '';
-      opacity: 0;
+    &::after {
+      position: absolute;
+      z-index: 10;
+      top: 0;
       display: block;
       width: 100%;
       height: 100%;
+      opacity: 0;
+      content: '';
       box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.5) inset, 50px 0 50px 23px rgba(0, 0, 0, 0.5) inset;
-      position: absolute;
-      top: 0;
-      z-index: 10;
       transition: $tr-fast;
     }
   }
+
   &__slider-img {
     display: block;
   }
+
   &__button-prev,
   &__button-next {
-    height: 100%;
     top: 22px;
+    height: 100%;
 
-    &:after {
-      color: #fff;
+    &::after {
       font-size: 12px;
       font-weight: bold;
+      color: #fff;
     }
   }
+
   &__content {
     padding: 23px 16px 19px 20px;
   }
+
   &__head {
+    margin-bottom: 15px;
+    margin-bottom: 6px;
+    padding-bottom: 12px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     font-family: $font-family-primary;
-    font-weight: $bold;
-    margin-bottom: 15px;
     line-height: 17px;
-    padding-bottom: 12px;
+    font-weight: $bold;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
-    margin-bottom: 6px;
   }
+
   &__number {
     font-size: 14px;
   }
+
   &__head-num {
+    margin-right: 8px;
+    display: inline-block;
     font-size: 19px;
     line-height: 17px;
-    display: inline-block;
-    margin-right: 8px;
+
     @media (max-width: $phone-width) {
       font-size: 14px;
       line-height: 18px;
     }
   }
+
   &__type {
     font-size: 14px;
     line-height: 15px;
     color: $primary-color;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
       line-height: 10px;
     }
   }
+
   &__head-price {
     font-family: $font-family-primary;
     font-size: 12px;
-    color: $text-color-brightness-50;
     line-height: 18px;
+    color: $text-color-brightness-50;
+
     @media (max-width: $phone-width) {
       font-size: 10px;
       line-height: 15px;
     }
   }
+
   &__head-sum {
-    font-size: 14px;
     font-family: $font-family-primary;
+    font-size: 14px;
     font-weight: $bold;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
     }
   }
+
   &__bottom {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
   }
+
   &__reviews {
+    font-family: $font-family-primary;
     font-size: 14px;
     color: $text-color-brightness-50;
-    font-family: $font-family-primary;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
     }
   }
+
   &__reviews-num {
     font-family: $font-family-primary;
     font-weight: $bold;
