--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -2,22 +2,29 @@
   min-width: 320px;
   font-family: $font-family-primary;
   font-size: 12px;
+
   @media (max-width: $phone-width) {
     min-width: 280px;
     font-size: 10px;
   }
+
   &--pointer {
     display: none;
   }
+
   &--nav {
     padding: 20px;
     border: none;
   }
+
   &--nav-title {
-    font-size: 19px;
     font-family: $font-family-primary;
+    font-size: 19px;
     font-weight: bold;
+    font-weight: $bold;
+    text-align: center;
   }
+
   &--nav-action {
     &:first-child {
       background-image: url('assets/img/arrow-forward.jpg');
@@ -25,93 +32,103 @@
       background-position: center;
       transform: rotate(-180deg);
     }
+
     &:last-child {
       background-image: url('assets/img/arrow-forward.jpg');
       background-repeat: no-repeat;
       background-position: center;
     }
+
     &:hover {
       background-color: #fff;
     }
+
     svg {
       display: none;
     }
   }
+
   &--cells {
     display: flex;
     justify-content: center;
   }
+
   &--cell {
     min-height: 40px;
+
     &-day {
       max-width: 40px;
       min-height: 40px;
       color: $text-color-brightness-50;
     }
   }
+
   &--days-names {
+    margin: 0;
     display: flex;
     justify-content: center;
-    margin: 0;
   }
+
   &--day-name {
-    font-size: 12px;
-    color: $primary-color;
-    font-family: $font-family-primary;
-    font-weight: $bold;
     max-width: 40px;
     min-height: 40px;
+    font-family: $font-family-primary;
+    font-size: 12px;
+    font-weight: $bold;
     text-transform: initial;
+    color: $primary-color;
   }
+
   &--buttons {
-    border: none;
+    padding: 20px;
     padding-top: 0;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    span {
-      display: inline-block;
-      flex: none;
-      height: auto;
-      text-transform: uppercase;
-      font-size: 12px;
-      font-family: $font-family-primary;
-      font-weight: $bold;
+    border: none;
+  }
 
-      cursor: pointer;
-      @media (max-width: $phone-width) {
-        font-size: 10px;
-      }
-      &:first-child {
+  &--button {
+    display: inline-block;
+    height: auto;
+    flex: none;
+    font-family: $font-family-primary;
+    font-size: 12px;
+    font-weight: $bold;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    @media (max-width: $phone-width) {
+      font-size: 10px;
+    }
+
+    &:last-child {
+      color: $primary-color;
+    }
+
+    &:first-child {
+      color: $text-color-brightness-50;
+
+      &:hover {
         color: $text-color-brightness-50;
-        &:hover {
-          background: none;
-          color: $text-color-brightness-50;
-        }
-      }
-      &:last-child {
-        color: $primary-color;
+        background: none;
       }
     }
   }
 }
-.datepicker--nav-title {
-  text-align: center;
-  font-family: $font-family-primary;
-  font-weight: $bold;
-}
+
 .datepicker--cell.-range-from-.-selected- {
-  border-radius: 50%;
   position: relative;
   z-index: 2;
-  &:after {
-    content: '';
-    display: block;
+  border-radius: 50%;
+
+  &::after {
     position: absolute;
     z-index: -1;
     left: 50%;
+    display: block;
     width: 50%;
     height: 100%;
+    content: '';
     background: linear-gradient(180deg, rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25));
   }
 }
@@ -125,47 +142,51 @@
 }
 
 .datepicker--cell.-range-to-.-selected- {
-  &:after {
-    content: '';
-    display: block;
+  &::after {
     position: absolute;
     z-index: -1;
     left: 0;
+    display: block;
     width: 50%;
     height: 100%;
+    content: '';
     background: linear-gradient(180deg, rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25));
   }
 }
 
 .datepicker--cell.-selected-,
 .datepicker--cell.-selected-.-current- {
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
   font-family: $font-family-primary;
   font-weight: $bold;
+  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
 }
+
 .datepicker--cell.-in-range- {
   background: linear-gradient(180deg, rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25));
 }
 
 .datepicker--cell.-current- {
-  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   color: #fff;
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   border-radius: 50%;
+
   &:hover {
     color: #fff;
   }
 }
+
 .datepicker--cell.-current-.-in-range- {
-  color: #fff;
   position: relative;
-  &:after {
-    content: '';
-    display: block;
+  color: #fff;
+
+  &::after {
     position: absolute;
     z-index: -1;
     left: 0;
+    display: block;
     width: 100%;
     height: 100%;
+    content: '';
     background: linear-gradient(180deg, rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25));
   }
 }
