--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -1,64 +1,70 @@
 .like-button {
+  position: relative;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   width: 38px;
-  height: 18px;
   min-width: 38px;
+  height: 18px;
   min-height: 18px;
+  justify-content: space-between;
+  align-items: center;
   font-family: $font-family-primary;
-  cursor: pointer;
   background-color: #fff;
   border-radius: 10px;
-  position: relative;
   transition: $tr-fast;
+  cursor: pointer;
   user-select: none;
 
-  &:after {
-    content: '';
+  &::after {
     position: absolute;
+    z-index: -1;
     left: -1px;
     display: block;
     min-width: 40px;
     min-height: 20px;
-    z-index: -1;
-    border-radius: 12px;
+    content: '';
     background-color: $text-color-brightness-25;
+    border-radius: 12px;
     transition: $tr-fast;
   }
+
   &__like {
-    width: 10px;
-    height: 10px;
     position: absolute;
     left: 4px;
+    width: 10px;
+    height: 10px;
     transition: $tr-fast;
   }
+
   &__like-favorite {
-    width: 10px;
-    height: 10px;
     position: absolute;
     left: 4px;
-    transition: $tr-fast;
+    width: 10px;
+    height: 10px;
     opacity: 0;
+    transition: $tr-fast;
   }
+
   &__likes {
-    font-size: 12px;
-    color: $text-color-brightness-25;
     position: absolute;
     right: 9px;
+    font-size: 12px;
+    color: $text-color-brightness-25;
     transition: $tr-fast;
   }
+
   &_active {
     svg {
       transform: rotateZ(-360deg);
-      animation-duration: $tr-fast;
       animation-name: changeSize;
+      animation-duration: $tr-fast;
       fill: $primary-color;
     }
+
     span {
       color: $primary-color;
     }
-    &:after {
+
+    &::after {
       background: $button-color-primary;
       transition: $tr-fast;
     }
@@ -69,9 +75,11 @@
   0% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(2);
   }
+
   100% {
     transform: scale(1);
   }
