--- a/src/components/radio-buttons/radio-buttons.scss
+++ b/src/components/radio-buttons/radio-buttons.scss
@@ -1,34 +1,42 @@
 .radio-buttons {
   $self: &;
-  user-select: none;
-  align-items: center;
+
   position: relative;
-  cursor: pointer;
+  align-items: center;
   font-size: 14px;
+  cursor: pointer;
+  user-select: none;
+
   &:last-child {
     margin-right: 0;
   }
+
   @media (max-width: $phone-width) {
     font-size: 12px;
   }
+
   &__label {
+    margin-right: 20px;
     display: inline-flex;
     align-items: center;
-    margin-right: 20px;
+
     &:last-child {
       margin-right: 0;
     }
   }
+
   &__input {
     position: absolute;
     visibility: hidden;
     cursor: pointer;
     &:checked ~ #{$self}__checkmark {
       border-color: $primary-color;
-      &:after {
+
+      &::after {
         opacity: 1;
       }
     }
+
     &:checked ~ label {
       color: $text-color;
     }
@@ -36,36 +44,41 @@
       color: $text-color-brightness-75;
     }
   }
+
   &__checkmark {
+    margin-right: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    max-height: 20px;
+    width: 20px;
     max-width: 20px;
     height: 20px;
-    width: 20px;
+    max-height: 20px;
+    justify-content: center;
+    align-items: center;
     background-color: #fff;
     border: 1px solid $text-color-brightness-25;
     border-radius: 50%;
-    margin-right: 10px;
+
     @media (max-width: $phone-width) {
       margin-right: 5px;
     }
+
     &:focus {
       border: $border-input-hover;
     }
-    &:after {
-      content: '';
+
+    &::after {
       display: block;
-      opacity: 0;
       width: 14px;
-      height: 14px;
       max-width: 14px;
-      border-radius: 50%;
+      height: 14px;
+      opacity: 0;
+      content: '';
       background: $button-color-primary;
+      border-radius: 50%;
       transition: $tr-fast;
     }
   }
+
   &__text {
     color: $text-color-brightness-50;
   }
