--- a/src/components/toggle-buttons/toggle-buttons.scss
+++ b/src/components/toggle-buttons/toggle-buttons.scss
@@ -1,57 +1,66 @@
 .toggle-buttons {
   $self: &;
+
   user-select: none;
+
   &__label {
     display: inline-flex;
     justify-content: center;
     align-items: flex-start;
     cursor: pointer;
   }
+
   &__checkbox {
     display: none;
     &:checked ~ #{$self}__checkmark {
       border-color: $primary-color;
-      &:after {
-        background: $button-color-primary;
+
+      &::after {
         left: calc(100% - 15px);
+        background: $button-color-primary;
       }
     }
     &:checked ~ #{$self}__subtitle {
       color: $text-color-brightness-75;
     }
   }
+
   &__checkmark {
-    display: inline-flex;
     position: relative;
+    margin-right: 10px;
+    display: inline-flex;
+    overflow: hidden;
+    min-width: 40px;
+    min-height: 20px;
     justify-content: flex-start;
     align-items: center;
-    min-height: 20px;
-    min-width: 40px;
-    border-radius: 10px;
     border: 1px solid $text-color-brightness-25;
-    overflow: hidden;
-    margin-right: 10px;
+    border-radius: 10px;
     transition: $tr-fast;
+
     &:focus {
       border: $border-input-hover;
     }
-    &:after {
-      content: '';
-      display: block;
+
+    &::after {
       position: absolute;
       left: 3px;
+      display: block;
       width: 12px;
       height: 12px;
-      border-radius: 50%;
+      content: '';
       background: $text-color-brightness-25;
+      border-radius: 50%;
       transition: $tr-fast;
     }
   }
+
   &__subtitle {
-    color: $text-color-brightness-75;
     font-size: 14px;
     line-height: 20px;
     white-space: pre-wrap;
+    color: $text-color-brightness-75;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
     }
