--- a/src/main.scss
+++ b/src/main.scss
@@ -4,80 +4,6 @@
 @import './utils/utils-scss/reset.scss';
 @import './utils/utils-scss/fonts.scss';
 
-html {
-  line-height: $line-height-primary;
-  font-size: $main-font-size;
-  font-family: $font-family-primary;
-  font-weight: $normal;
-  color: $text-color;
-  background-color: #ffffff;
-  height: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  @media screen and (max-width: $table-width) {
-    font-size: 16px;
-  }
-  @media screen and (max-width: $phone-width) {
-    font-size: 15px;
-  }
-  @media screen and (max-width: $sm-phone-width) {
-    font-size: 14px;
-  }
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-.js-focus-visible :focus:not(.focus-visible) {
-  outline: none;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  min-height: 100vh;
-}
-
-.content {
-  flex: 1 0 auto;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  flex: 0 0 auto;
-  margin: 0 auto;
-  padding: 0;
-  max-width: $desktop-width;
-  @media screen and (max-width: $desktop-width) {
-    max-width: $md-desktop-width;
-  }
-  @media screen and (max-width: $md-desktop-width) {
-    max-width: $sm-desktop-width;
-    padding: 0 10px;
-  }
-  @media screen and (max-width: $sm-desktop-width) {
-    width: 100%;
-  }
-  @media (min-width: $phone-width) and (max-width: $table-width) {
-    width: 100%;
-    padding: 0 18px;
-  }
-  @media (min-width: $sm-phone-width) and (max-width: $phone-width) {
-    max-width: 100vw;
-    padding: 0 10px;
-  }
-}
-
 // Modules
 @import '~/ion-rangeslider/css/ion.rangeSlider.css';
 @import '~/swiper/swiper-bundle.min.css';
@@ -123,3 +49,85 @@ body {
 @import './pages/filter-page/filter-page';
 @import './pages/room-details/room-details';
 @import './components/circle-diagram/circle-diagram';
+
+html {
+  height: 100%;
+  font-family: $font-family-primary;
+  font-size: $main-font-size;
+  line-height: $line-height-primary;
+  font-weight: $normal;
+  color: $text-color;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  @media screen and (max-width: $table-width) {
+    font-size: 16px;
+  }
+
+  @media screen and (max-width: $phone-width) {
+    font-size: 15px;
+  }
+
+  @media screen and (max-width: $sm-phone-width) {
+    font-size: 14px;
+  }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: none;
+}
+
+.wrapper {
+  margin: 0 auto;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  max-width: $desktop-width;
+  height: 100%;
+  flex: 0 0 auto;
+
+  @media screen and (max-width: $desktop-width) {
+    max-width: $md-desktop-width;
+  }
+
+  @media screen and (max-width: $md-desktop-width) {
+    padding: 0 10px;
+    max-width: $sm-desktop-width;
+  }
+
+  @media screen and (max-width: $sm-desktop-width) {
+    width: 100%;
+  }
+
+  @media (min-width: $phone-width) and (max-width: $table-width) {
+    padding: 0 18px;
+    width: 100%;
+  }
+
+  @media (min-width: $sm-phone-width) and (max-width: $phone-width) {
+    padding: 0 10px;
+    max-width: 100vw;
+  }
+}
