--- a/src/utils/utils-scss/reset.scss
+++ b/src/utils/utils-scss/reset.scss
@@ -89,10 +89,12 @@ video {
 // Links
 a {
   text-decoration: none;
+
   &:active,
   &:hover {
     outline: none;
   }
+
   &:focus {
     outline: 2px solid $primary-color;
   }
@@ -101,9 +103,9 @@ a {
 // List
 ul,
 li {
-  list-style-type: none;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 // Headlines
@@ -121,9 +123,10 @@ h6 {
 html {
   box-sizing: border-box;
 }
+
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: border-box;
   outline: none;
 }
@@ -134,6 +137,7 @@ video {
   max-width: 100%;
   height: auto;
 }
+
 audio,
 canvas,
 iframe,
@@ -142,46 +146,53 @@ img,
 svg {
   vertical-align: middle;
 }
+
 iframe {
   border: 0;
 }
 
 // From
 textarea {
-  resize: none; /*remove the resize handle on the bottom right*/
   vertical-align: top;
-  box-shadow: none;
+  resize: none; /* remove the resize handle on the bottom right */
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
+  box-shadow: none;
 }
+
 fieldset {
   border: 0 none;
 }
+
 label {
   cursor: pointer;
 }
-input,
-textarea,
-select,
-button {
-  border: none;
-  font-size: 100%;
-  margin: 0;
-  outline: none;
-  &:focus {
-    outline: 2px solid $primary-color;
-  }
-}
+
 button,
 input {
   line-height: normal;
 }
 
+input,
+textarea,
+select,
+button {
+  margin: 0;
+  font-size: 100%;
+  border: none;
+  outline: none;
+
+  &:focus {
+    outline: 2px solid $primary-color;
+  }
+}
+
 // Table
 table {
-  border-collapse: collapse;
   border-spacing: 0;
+  border-collapse: collapse;
 }
+
 td,
 th {
   padding: 0;
