--- a/src/components/card-sign-in/card-sign-in.scss
+++ b/src/components/card-sign-in/card-sign-in.scss
@@ -1,6 +1,6 @@
 .card-sing-in {
   width: 100%;
-  max-width: 380px;
+  width: 380px;
   background-color: $bg-color-primary;
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
