--- a/src/components/rate-buttons/rate-buttons.pug
+++ b/src/components/rate-buttons/rate-buttons.pug
@@ -1,41 +1,12 @@
-mixin rate-buttons()
+mixin rate-buttons({rate})
   .rate-buttons.js-rate-buttons
-    label.rate-buttons__label( tabindex="0")
-      input(type="checkbox").rate-buttons__input.js-rate-button__input
-      .rate-buttons__star
-        svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star").rate-buttons__star
+    each val in [1,2,3,4,5]
+      if val > rate
+        .rate-buttons__star
+          svg.rate-buttons__svg(role="image" aria-label="rate-star")
+            use(xlink:href="#star_border").rate-buttons__star
+      else 
+        .rate-buttons__star
+          svg.rate-buttons__svg(role="image" aria-label="rate-star")
+            use(xlink:href="#star").rate-buttons__star
       
-    label.rate-buttons__label( tabindex="0")
-      input(type="checkbox").rate-buttons__input.js-rate-button__input
-      .rate-buttons__star
-        svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star").rate-buttons__star
-
-    label.rate-buttons__label( tabindex="0")
-      input(type="checkbox").rate-buttons__input.js-rate-button__input
-      .rate-buttons__star
-        svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star").rate-buttons__star
-
-    label.rate-buttons__label( tabindex="0")
-      input(type="checkbox").rate-buttons__input.js-rate-button__input
-      .rate-buttons__star
-        svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star").rate-buttons__star
-
-    label.rate-buttons__label( tabindex="0")
-      input(type="checkbox").rate-buttons__input.js-rate-button__input
-      .rate-buttons__star
-        svg.rate-buttons__svg(role="image" aria-label="rate-star")
-          use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg_hidden(role="image" aria-label="rate-star")
-          use(xlink:href="#star").rate-buttons__star
