--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -94,7 +94,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 5
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -106,7 +107,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 4
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -118,7 +120,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 3
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -130,7 +133,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 5
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -142,7 +146,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 4
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -154,7 +159,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 3
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -166,7 +172,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 5
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -178,7 +185,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 4
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -190,7 +198,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 3
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -202,7 +211,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 5
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -214,7 +224,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 3
                   })
                  +card-room([
                   {src: "room-2.jpg"},
@@ -226,7 +237,8 @@ block content
                     type: "люкс",
                     number: 888,
                     priceForOneDay: "9 990",
-                    reviews: 145
+                    reviews: 145,
+                    rate: 3
                   })
               .filter-page__pagination
                 +pagination()
