--- a/src/pages/cards-page/cards-page.pug
+++ b/src/pages/cards-page/cards-page.pug
@@ -55,7 +55,8 @@ block content
             type: "люкс",
             number: 888,
             priceForOneDay: "9 990",
-            reviews: 145
+            reviews: 145,
+            rate: 4
           })
         .cards-page__card
           +card-room([
@@ -68,7 +69,8 @@ block content
             type: "люкс",
             number: 888,
             priceForOneDay: "9 990",
-            reviews: 145
+            reviews: 145,
+            rate: 1
           })
         
         
