--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -81,7 +81,7 @@
 
   &--buttons {
     padding: 20px;
-    padding-top: 0;
+    padding-top: 15px;
     display: flex;
     justify-content: space-between;
     border: none;
