--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -89,7 +89,7 @@ block content
               .block-title.block-title_margin-b-16 like buttons
               +like-button({className: "", count: 0})
               .block-title.block-title_margin-b-16 rate button
-              +rate-buttons()
+              +rate-buttons({rate: 3})
               +rich-list({
                 title: "rich checkbox buttons",
                 items: [
