--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -57,6 +57,10 @@
     padding: 15px 26px;
   }
 
+  &_small {
+    padding: 10px 20px;
+  }
+
   &_white {
     position: relative;
     z-index: 10;
