--- a/src/components/card-check-in/card-check-in.pug
+++ b/src/components/card-check-in/card-check-in.pug
@@ -58,7 +58,8 @@ mixin card-check-in()
                   )
           .card-check-in__item.card-check-in__item_margin-b-20
             +toggle-buttons({title: ""})
-          button.button.button_big.card-check-in__button-pay Зарегистрироваться
+          .card-check-in__item.card-check-in__item_margin-b-30
+            button.button.button_big.card-check-in__button-pay Зарегистрироваться
           .card-check-in__sign-in 
             span.card-check-in__sign-in-text
               | Уже есть аккаунт на Toxin
