--- a/src/components/card-check-in/card-check-in.scss
+++ b/src/components/card-check-in/card-check-in.scss
@@ -46,13 +46,13 @@
       margin-bottom: 25px;
     }
 
+    &_margin-b-30 {
+      margin-bottom: 30px;
+    }
+
     &_margin-b-20 {
       margin-bottom: 20px;
     }
-  }
-
-  &__button-pay {
-    margin-bottom: 30px;
   }
 
   &__sign-in {
