--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -104,9 +104,12 @@
         }
       }
       #{$self}__buttons {
+        
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        
+        justify-content: space-between;
+        
       }
       #{$self}__button {
         margin-bottom: 20px;
@@ -161,12 +164,12 @@
     }
   }
 
-  &__button {
+  &__button-wrap {
     margin-right: 20px;
-    padding: 10px 20px;
-
+    display: inline-block;
     @media (max-width: $sm-desktop-width) {
       margin-right: 0;
+      margin-bottom: 20px;
     }
 
     &:last-child {
