fixed dropdown-choose component

--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -137,7 +137,7 @@
     border-radius: 50%;
     cursor: pointer;
 
-    &_noactive {
+    &_no-active {
       border: 1px solid $text-color-brightness-25;
       cursor: initial;
     }
