--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -35,6 +35,7 @@
     max-width: 150px;
     font-size: 14px;
     line-height: 18px;
+    color: $text-color-brightness-75;
     border: $border-input;
     border-radius: 4px;
     transition: $tr-fast;
