--- a/src/components/radio-buttons/radio-buttons.pug
+++ b/src/components/radio-buttons/radio-buttons.pug
@@ -2,7 +2,7 @@ mixin radio-buttons({title})
   .radio-buttons
     .radio-buttons__inputs
       label.radio-buttons__label
-        input(type="radio" name="radio").radio-buttons__input
+        input(type="radio" name="radio" checked).radio-buttons__input
         span.radio-buttons__checkmark(tabindex="0")
         span.radio-buttons__text Мужчина
       label.radio-buttons__label
