--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -33,6 +33,7 @@
     padding: 12px 15px;
     width: 100%;
     max-width: 150px;
+    font-family: $font-family-primary;
     font-size: 14px;
     line-height: 18px;
     color: $text-color-brightness-75;
