--- a/src/components/expand-list/expand-list.scss
+++ b/src/components/expand-list/expand-list.scss
@@ -110,7 +110,7 @@
   }
 
   &__checkbox:checked + span {
-    background-image: url('./assets/img/vector.jpg');
+    background-image: url('./assets/img/vector.svg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
     border-color: $primary-color;
