--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -85,7 +85,7 @@
       bottom: 0;
       left: 0;
       content: '';
-      background: $button-text-color-secondary;
+      background: $button-color-primary;
       border-radius: 22px;
       transition: $tr-fast;
     }
