--- a/src/components/checkbox-buttons/checkbox-buttons.scss
+++ b/src/components/checkbox-buttons/checkbox-buttons.scss
@@ -52,7 +52,7 @@
   }
 
   input:checked + span {
-    background-image: url('./assets/img/vector.jpg');
+    background-image: url('./assets/img/vector.svg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
     border-color: $primary-color;
