--- a/src/components/subscription/subscription.scss
+++ b/src/components/subscription/subscription.scss
@@ -53,7 +53,7 @@
     width: 46px;
     height: 45px;
     background-color: transparent;
-    background-image: url('./assets/img/arrow-forward.jpg');
+    background-image: url('./assets/img/arrow-forward-colored.svg');
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
