--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -118,6 +118,14 @@
   }
 }
 
+div.datepicker--cell.-in-range-.-disabled- {
+  background: none;
+}
+
+div.datepicker--cell.-range-from- {
+  border: none;
+}
+
 div.datepicker--cell.-selected-.-focus- {
   background: $button-color-primary;
 }
@@ -175,6 +183,9 @@ div.datepicker--cell.-selected-.-focus- {
   color: #fff;
   background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   border-radius: 50%;
+  position: relative;
+  font-weight: bold;
+  z-index: 1;
 
   &:hover {
     color: #fff;
@@ -185,18 +196,12 @@ div.datepicker--cell.-selected-.-focus- {
   background: none;
 }
 
-.datepicker--cell.-current-.-in-range- {
+.datepicker--cell.datepicker--cell-day.-in-range-.-current- {
   position: relative;
+  z-index: 2;
   color: #fff;
-
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   &::after {
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    content: '';
-    background: linear-gradient(180deg, rgba(188, 156, 255, 0.25) 0%, rgba(139, 164, 249, 0.25));
+    display: none;
   }
 }
