added icon at button of card-selection

--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -17,4 +17,5 @@ mixin card-selection()
             h4.block-title
               | Гости
             +dropdown-choose({className: "js-dropdown-guests", title:"Гости"})
-          input.button.button_big(type="submit" value="подобрать номер") 
+          button.button.button_big
+            | подобрать номер
