fixed menu mobile

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -64,7 +64,7 @@ mixin footer()
       .container
         .footer__basement-content
           span.footer__copyright
-            | Copyright © 2018 Toxin отель. Все права зачищены.
+            | Copyright © 2018 Toxin отель. Все права защищены.
           .footer__social(aria-label="Социальные сети")
             a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
