--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,9 +19,9 @@
   }
 
   &__nav-shadow {
-    position: absolute;
+    position: fixed;
     z-index: 900;
-    top: 100%;
+    top: 0;
     right: 0;
     display: none;
     width: 100%;
@@ -48,19 +48,22 @@
     @media (max-width: $sm-desktop-width) {
       display: none;
       text-align: center;
+      padding-bottom: 20px;
     }
 
     &_dropdown {
-      position: absolute;
+      position: fixed;
       z-index: 1000;
-      top: 100%;
+      top: 0;
       right: 0;
-      overflow: hidden;
+      bottom: 0;
+      overflow-y: scroll;
       width: 100%;
       max-width: 0;
-      min-height: 100vh;
+      height: 100vh;
       background-color: $bg-color-primary;
       transition: $tr-fast;
+      border-top: 3px solid #b866b8;
 
       @media (max-width: $sm-desktop-width) {
         display: block;
@@ -99,7 +102,6 @@
         display: inline-block;
         font-size: 18px;
         vertical-align: center;
-
         @media (max-width: $phone-width) {
           font-size: 16px;
         }
@@ -194,6 +196,16 @@
     min-width: 30px;
     min-height: 30px;
     cursor: pointer;
+
+    &_active {
+      position: fixed;
+      z-index: 1002;
+      top: 15px;
+      right: 20px;
+      @media screen and (max-width: $phone-width) {
+        right: 10px;
+      }
+    }
 
     @media (max-width: $sm-desktop-width) {
       display: block;
