--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -2,30 +2,30 @@ mixin header({isEntered})
   header.header.js-header
     .container
       .header__content
-        a(href="index.html")
+        a(href="index.html").header__logo-link
           svg(class="logo logo_colored header__logo" aria-label="toxin logo")
             use(xlink:href="#logo-colored")
         nav.header__nav
           ul.header__list
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | О нас
+                | Константин Константинович Константинополевский
 
             li.header__list-item.header__list-item_dropdown
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Услуги
+                | Константин Константинович Константинополевский
 
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Вакансии
+                | Константин Константинович Константинополевский
 
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Новости
+                | Константин Константинович Константинополевский
 
             li.header__list-item.header__list-item_dropdown
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Соглашения
+                | Константин Константинович Константинополевский
           if !isEntered
             .header__buttons
               span.header__button-wrap
